--- a/web-app/src/app/(services)/service/services.module.css
+++ b/web-app/src/app/(services)/service/services.module.css
@@ -132,7 +132,7 @@ order: 1;
 /* Mobile (≤560px) */
 @media screen and (max-width: 560px) {
   .dig {
-    padding: 2em 1.5em;
+    padding: 2em 1.5em 5em;
   }
   .dig h3 {
     font-size: var(--p1);
@@ -144,7 +144,7 @@ order: 1;
     font-size: var(--p4);
   }
   .pic {
-    height: 35vh;             /* smaller for phones */
+    height: 55vh;             /* smaller for phones */
     background-size: cover;   /* back to crop-fill for narrow screens */
   }
 }
