--- a/web-app/src/app/contact/contact.module.css
+++ b/web-app/src/app/contact/contact.module.css
@@ -78,6 +78,7 @@
 
 .contactButton {
   width: 100%;
+  font-size: 1rem;
 }
 
 .overlay {
@@ -101,7 +102,7 @@
 @media (max-width: 768px) { /* Large Mobile */
   .contactForm {
     width: 80%;
-    padding: 1.2em;
+    padding: 1.3em;
   }
   .contactForm h2 {
     font-size: 1.2rem;
