--- a/web-app/src/app/(pages)/admin/admin.module.css
+++ b/web-app/src/app/(pages)/admin/admin.module.css
@@ -22,6 +22,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 .sideBar button {
   width: 70%;
@@ -225,8 +226,6 @@
     overflow-x: auto;
   }
 }
-
-
 @media (max-width: 960px) {
   .adminWrapper {
     flex-direction: column;
@@ -253,7 +252,7 @@
     cursor: grab;
   }
   .tableHeader input {
-    width: 60%;
+    width: 40%;
   }
   .tableInner {
     display: block;
@@ -269,12 +268,31 @@
   .sideBar button {
     width: 70%;
   }
+  .tableHeader{
+    position: sticky;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5em;
+  }
+  .tableHeader input,
+  .tableHeader button{
+    width: 100%;
+    margin: 0 auto;
+  }
   .adminTable {
     padding: 1em;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    touch-action: pan-x pan-y;
   }
+  .tableInner{
+    min-width: max-content;
+  }
+  .phoneNumbersSection{
+    padding: 2em;
+  }
+
 }
-
-
-
-
-
