--- a/web-app/src/app/(pages)/admin/admin.module.css
+++ b/web-app/src/app/(pages)/admin/admin.module.css
@@ -287,12 +287,12 @@
     margin: 0 auto;
   }
   .adminTable {
-    padding: 1em;
+    padding: 1.5em 1em;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     touch-action: pan-x pan-y;
   }
-  .tableInner{
+  .followupTableInner{
     min-width: max-content;
   }
   .phoneNumbersSection{
