--- a/web-app/src/app/(pages)/admin/admin.module.css
+++ b/web-app/src/app/(pages)/admin/admin.module.css
@@ -292,6 +292,7 @@
     -webkit-overflow-scrolling: touch;
     touch-action: pan-x pan-y;
   }
+  .tableInner,
   .followupTableInner{
     min-width: max-content;
   }
