--- a/web-app/src/app/(services)/announcements/announcement.module.css
+++ b/web-app/src/app/(services)/announcements/announcement.module.css
@@ -214,3 +214,62 @@ p.ministering span{
     font-size: var(--p4);
   }
 }
+
+/* Skeleton base */
+.skeleton {
+  width: 100%;
+  height: 200px;
+  border-radius: 8px;
+  background: #e2e2e2;
+  position: relative;
+  overflow: hidden;
+}
+
+/* Skeleton lines */
+.skeletonLine,
+.skeletonLineShort,
+.skeletonLineMedium {
+  height: 16px;
+  background-color: #e2e2e2;
+  margin-bottom: 8px;
+  border-radius: 4px;
+  position: relative;
+  overflow: hidden;
+}
+
+.skeletonLineShort {
+  width: 60%;
+}
+
+.skeletonLineMedium {
+  width: 80%;
+}
+
+/* Shimmer effect */
+@keyframes shimmer {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+.skeleton::after,
+.skeletonLine::after,
+.skeletonLineShort::after,
+.skeletonLineMedium::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  animation: shimmer 1.5s infinite;
+}
