--- a/web-app/src/app/components/components.module.css
+++ b/web-app/src/app/components/components.module.css
@@ -632,8 +632,8 @@ ul.sublinks {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  width: 55px;
-  height: 55px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background: var(--background);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
@@ -651,9 +651,9 @@ ul.sublinks {
 }
 
 .liveChatBox img {
-  width: 75%;
-  height: 75%;
-  object-fit: contain;
+  width: 80%;
+  height: 80%;
+  object-fit: cover;
 }
 
 /* Chat Box */
@@ -674,7 +674,7 @@ ul.sublinks {
 .chatHeader {
   background: var(--tertiary-50);
   color: var(--background);
-  padding: 0.8em 2em 0.8em 1em;
+  padding: 0.8em 1em;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -795,11 +795,9 @@ ul.sublinks {
 }
 
 /* Chat Responsive */
-@media (max-width: 960px) {
-  .chatHeader{
-    padding-right: 1em;
-  }
-}
+/* @media (max-width: 960px) {
+  
+} */
 @media (max-width: 480px) {
   .chatBox {
     width: 90%;
