--- a/web-app/src/app/home.module.css
+++ b/web-app/src/app/home.module.css
@@ -165,9 +165,12 @@
 .eventsWrapper {
   overflow: hidden;
   width: 70%;
-  padding: 1em 0;
-  margin-bottom: 1em;
+  height: auto;
+  padding: 1em 0 2em;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .track {
