--- a/web-app/src/app/(pages)/faq/faq.module.css
+++ b/web-app/src/app/(pages)/faq/faq.module.css
@@ -20,18 +20,6 @@
   margin: 1em 0;
 }
 
-.faqQst {
-  width: 65%;
-  margin: auto;
-  background-color: teal;
-  color: white;
-  cursor: pointer;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  border-radius: var(--br-1) calc(var(--br-2) / 2) 0 0;
-  padding: 0.7em;
-  text-align: left;
-}
-
 .ans,
 .faqQst {
   margin: auto;
@@ -39,16 +27,31 @@
   padding: 0.7em;
 }
 
+.faqQst {
+  background-color: var(--tertiary-100);
+  color: var(--background);
+  cursor: pointer;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: var(--br-1) calc(var(--br-2) / 2) 0 0;
+  text-align: left;
+  font-family: var(--headerFont);
+  font-weight: var(--medium);
+  font-size: var(--s);
+}
+
 .ans {
   overflow: hidden;
   transition: max-height 0.3s ease, opacity 0.3s ease;
   max-height: 0;
-  opacity: 0;
   border: 1px solid rgba(211, 211, 211, 0.517);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 0 0 var(--br-1) var(--br-1);
-  background: #fff;
-  color: #333;
+  background: var(--background);
+  color: var(--hoverBg);
+  font-family: var(--bodyFont);
+  font-weight: var(--regular);
+  font-size: calc(var(--p3)*1.05);
+  line-height: 1.8rem;
 }
 
 .show {
