--- a/web-app/src/app/home.module.css
+++ b/web-app/src/app/home.module.css
@@ -81,9 +81,11 @@
   min-width: 300px;
   font-family: var(--bodyFont);
   font-weight: var(--regular);
+  font-size: var(--p2);
   color: var(--foreground);
   text-align: justify;
   letter-spacing: 0;
+  line-height: 2rem;
   opacity: .8;
 }
 .mobileChurch{
@@ -94,6 +96,12 @@
   height: 50dvh;
   margin-top: 2em;
   display: none;
+}
+.overlay{
+  position: absolute;
+  inset: 0;
+  background: rgba(246, 240, 223, 0.1);
+  z-index: -100;
 }
 .prototype{
   position: relative;
@@ -250,13 +258,13 @@
   height: fit-content;
   border-radius: var(--br-2);
   transition: all 0.3s ease;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.minDetails{
+  margin-top: 1em;
 }
 .testimonies {
   width: 200px;
-}
-.testimonies,
-.minDetails {
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 .minDetails img {
   width: 100%;
@@ -276,7 +284,7 @@
   background-color: var(--background);
   width: 100%;
   height: fit-content;
-  padding: 0 0 1em;
+  padding: 0 0 0.5em;
   text-align: center;
   border-radius: var(--br-2);
   color: var(--foreground);
@@ -305,6 +313,12 @@
 .testifiersDetails p {
   color: var(--foreground);
   opacity: .7;
+  font-family: var(--bodyFont);
+  font-weight: var(--regular);
+  font-size: var(--p3);
+  text-align: left;
+  letter-spacing: 1px;
+  line-height: 1.5rem;
 }
 .testifiersDetails {
   width: 100%;
@@ -314,15 +328,18 @@
   padding: 0 10em;
 }
 .testimonyWrapper {
+  width: 100%;
+  height: auto;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 3em;
+  gap: 2em;
   scroll-behavior: smooth;
 }
-.testimonies > div {
+.testimonies {
+  width: 28%;
   padding: 1.2em;
 }
 .testimonies:hover {
