--- a/web-app/src/app/home.module.css
+++ b/web-app/src/app/home.module.css
@@ -33,7 +33,7 @@
 .detailImage{
   width: 100%;
   height: 70dvh;
-  background: url('../../public/images/about-us-img-1-1.png') no-repeat center; 
+  background: url('../../public/images/mummy-daddy.png') no-repeat center; 
   background-size: contain;
   background-blend-mode: overlay;
 }
@@ -46,7 +46,8 @@
   justify-content: center;
   align-items: center;
   gap: 5px;
-  padding: 0.5em 0;
+  padding: 0.8em 0;
+  margin-top: -52px;
   border-radius: calc(var(--br-2) - 5px);
 }
 .pastorsDetails h3{
@@ -64,7 +65,7 @@
 .aboutContent{
   flex: 1;
   height: auto; 
-  padding: 3em;
+  padding: 5em 3em 0;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -242,7 +243,7 @@
   height: auto;
   display: flex;
   flex-wrap: wrap;
-  gap: 2.5em;
+  gap: 5em;
   margin-bottom: 1.5em;
   align-items: center;
   justify-content: center;
