--- a/web-app/src/app/(ministries)/followUp/followupShimmer.module.css
+++ b/web-app/src/app/(ministries)/followUp/followupShimmer.module.css
@@ -71,3 +71,9 @@
     background-position: 200% 0;
   }
 }
+/* @media screen and (max-width: 599px) {
+   .followUp {
+    background-image: none;
+    background-color: var(--tertiary-100);
+  }
+} */
