--- a/web-app/src/app/(pages)/admin/admin.module.css
+++ b/web-app/src/app/(pages)/admin/admin.module.css
@@ -302,7 +302,12 @@
 
 }
 
-
+@media screen and (max-width: 599px) {
+   #admin {
+    background-image: none;
+    background-color: var(--tertiary-100);
+  }
+}
 
 /* Skeleton shimmer effect for table */
 .skeletonWrapper {
