--- a/web-app/src/app/(ministries)/departments/departments.module.css
+++ b/web-app/src/app/(ministries)/departments/departments.module.css
@@ -62,3 +62,12 @@
   font-weight: var(--regular);
   font-size: var(--p3);
 }
+@media screen and (max-width: 599px) {
+   #department {
+    background-image: none;
+    background-color: var(--tertiary-100);
+  }
+}
+
+
+
