--- a/web-app/src/app/(services)/service/services.module.css
+++ b/web-app/src/app/(services)/service/services.module.css
@@ -23,7 +23,6 @@
 }
 .program4 {
   background: url(../../../../public/images/thanksgiving.jpg) no-repeat center;
-  box-shadow: 0 0 3px 0px rgba(0, 0, 0, .3);
 }
 .program5 {
   background: url(../../../../public/images/power.jpg) no-repeat center;
@@ -32,7 +31,7 @@
   background: url(../../../../public/images/ycs.jpg) no-repeat center;
 }
 .pic{
-   width: 50%;
+  width: 50%;
   height: 110dvh;
   background-size: cover;
 }
@@ -69,7 +68,7 @@
 .right{
 order: 1;
 }
-.service:nth-child(3){
+/* .service:nth-child(3){
   background-color: var(--secondary-50);
 }
 .service:nth-child(4){
@@ -77,7 +76,7 @@ order: 1;
 }
 .service:nth-child(5){
   background-color: var(--tertiary-50);
-}
+} */
 
 /* ============= Responsive Fix ============= */
 
@@ -102,7 +101,7 @@ order: 1;
 }
 
 /* Mobile */
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 599px) {
   .dig {
     padding: 2em 1.5em;
   }
@@ -116,7 +115,7 @@ order: 1;
     font-size: var(--p4);
   }
   .pic {
-    height: 40dvh; /* smaller image height on small phones */
+    height: 20dvh; /* smaller image height on small phones */
   }
 }
 /* Tablet + Mobile (≤960px) */
@@ -147,8 +146,8 @@ order: 1;
   }
 }
 
-/* Mobile (≤560px) */
-@media screen and (max-width: 560px) {
+/* Mobile (≤599px) */
+@media screen and (max-width: 599px) {
   .dig {
     padding: 2em 1.5em 5em;
   }
@@ -162,7 +161,12 @@ order: 1;
     font-size: var(--p4);
   }
   .pic {
-    height: 60vh;             /* smaller for phones */
-    background-size: cover;   /* back to crop-fill for narrow screens */
+    width: 100%;
+    height: 50vh;
+    background-size: contain;
+  }
+  #service {
+    background-image: none;
+    background-color: var(--tertiary-100);
   }
 }
